--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 </head>
 <body  style="background:#aaaae71a;">
 <% if user_signed_in? %>
-  <nav class="navbar navbar-inverse" style="position:fixed;width:100%;">
+  <nav class="navbar navbar-inverse" style="width:100%;">
     <div class="container-fluid" style="top:5px;">
       <div class="navbar-header active" >     
         <div class="heading_image"><img src="/assets/appicon.png" class="heading_image" style="float:left;height:35px;width:35px;margin-top:11px;cursor:pointer"><a href="/" class="navbar-brand" style="margin-top:10px;margin-left:-24px;cursor:pointer">logs</a></div>
