--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,10 +6,8 @@
   .card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background:#aaaae733;
-    width: 40%;
-    height: 400px;
-    margin-left: 400px;
-    margin-top:  100px;
+    margin: 10px;
+    max-width: 400px;
   }
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -18,22 +16,23 @@
   padding: 2px 16px;
 }
 </style>
-<div class="card">
-  <br>
-  <center><h2><strong>Sign Up</strong></h2></center>
-  <div class="card-body">
+<center>
+  <div class="card">
+    <br>
+    <center><h2><strong>Sign Up</strong></h2></center>
+    <div class="card-body">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
         <div class="field">
-          <%= f.email_field :email, autofocus: true, autocomplete: "email",:class=>"form-control",:placeholder=>"Email" %>
+          <%= f.email_field :email, autofocus: true,:class=>"form-control",:placeholder=>"Email",:required=> true %>
         </div>
         <br>
         <div class="field">
-          <%= f.password_field :password, autocomplete: "off",:class=>"form-control" ,:placeholder=>"Password(Minimum 6 characters)"%>
+          <%= f.password_field :password,:class=>"form-control" ,:placeholder=>"Password(Minimum 6 characters)",:required=> true %>
         </div>
         <br>
         <div class="field">
-          <%= f.password_field :password_confirmation, autocomplete: "off",:class=>"form-control",:placeholder=>"Confirm Password" %>
+          <%= f.password_field :password_confirmation,:class=>"form-control",:placeholder=>"Confirm Password",:required=> true%>
         </div>
         <br>
         <div class="actions">
@@ -44,6 +43,5 @@
       <%= link_to "Log In", new_user_session_path %><br>
       <a href="/users/auth/google_oauth2">Sign in with Google</a><br>
     </div>
-  </center>
-</div>
-
+  </div>
+</center>
