--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -123,16 +123,23 @@
             %div.panel-heading
               %b
                 %a.post_title{:href=>"javascript:void(0)",:class=>"post_title_nonuser"}#{p.title.truncate(30).capitalize}
-            %div.panel-body
-              .row
-                .col-sm-4.col-sm-4   
-                  - if p.pictures.present?
+                
+            -if p.pictures.present?    
+              %div.panel-body
+                .row
+                  .col-sm-4.col-sm-4   
                     - p.pictures.take(4).each do |picture|
                       .col-md-6
                         %img{:src=>picture.image,:style=>"width:100%;height:100%;"}
                         %span{:style=>"clear:fix;"}
-                .col-sm-8.col-sm-8
-                  %b=p.description.truncate(1000)
+                  .col-sm-8.col-sm-8
+                    %b=p.description.truncate(1000)
+            -else 
+              %div.panel-body
+                .row
+                  .col-md-12.col-sm-12
+                    %b=p.description.truncate(1000)
+
             .row
               .col-md-4 
                 %div.panel-body 
