--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -123,7 +123,7 @@
             %div.panel-heading
               %b
                 %a.post_title{:href=>"javascript:void(0)",:class=>"post_title_nonuser"}#{p.title.truncate(30).capitalize}
-                
+
             -if p.pictures.present?    
               %div.panel-body
                 .row
@@ -156,7 +156,7 @@
   -else
     %div{:style=>"padding-left:20px;"} 
     %b 
-      No posts yet...
+      No posts yet...Sign in to post!
 
 
 :javascript
