--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -40,36 +40,31 @@
 
   %div.main
     -if "#{current_user.id}" == @post.user_id
-      %div.inner1
-        %strong Title:
-        =text_field_tag 'Title' , "#{@post.title}" ,readonly: 'readonly',:class=>"form-control"
+      .row
+        .col-md-6.col-sm-6
+          =text_field_tag 'Title' , "#{@post.title}" ,readonly: 'readonly',:class=>"form-control",:style=>"margin-bottom:10px;"
+        .col-md-6.col-sm-6
+          =button_tag("Edit Title",:class =>"btn btn-primary",:id => "edit_title",:style=>"margin-bottom:10px;")
+          =button_tag("Update Title",:class =>"btn btn-success",:id => "update_title")
+          =button_tag("Cancel",:class =>"btn btn-danger",:id => "cancel_title")
     -else
-      %div
-        %strong Title:
-        =text_field_tag 'Title' , "#{@post.title}" ,readonly: 'readonly',:class=>"form-control"
-    -if "#{current_user.id}" == @post.user_id
-      %div.inner2
-        =button_tag("Edit Title",:class =>"btn btn-primary",:id => "edit_title")
-        =button_tag("Update Title",:class =>"btn btn-success",:id => "update_title")
-        =button_tag("Cancel",:class =>"btn btn-danger",:id => "cancel_title")
-  %br
+      %strong Title:
+      =text_field_tag 'Title' , "#{@post.title}" ,readonly: 'readonly',:class=>"form-control"
 
 
 
   %div.main
     -if "#{current_user.id}" == @post.user_id
-      %div.inner1
-        %strong Description:
-        =text_area_tag 'Description' , "#{@post.description}",readonly: 'readonly',:class=>"form-control",:style=>"height:200px;"
+      .row
+        .col-md-6.col-sm-6
+          =text_area_tag 'Description' , "#{@post.description}",readonly: 'readonly',:class=>"form-control",:style=>"height:200px;margin-bottom:10px;"
+        .col-md-6.col-sm-6
+          =button_tag("Edit Description",:class =>"btn btn-primary",:id => "edit_desc",:style=>"margin-bottom:10px;")
+          =button_tag("Update Description",:class =>"btn btn-success",:id => "update_desc")
+          =button_tag("Cancel",:class =>"btn btn-danger",:id => "cancel_desc")
     -else
       %div
-        %strong Description:
         =text_area_tag 'Description' , "#{@post.description}",readonly: 'readonly',:class=>"form-control",:style=>"height:130px;max-width:1221px;max-height:175px;"
-    -if "#{current_user.id}" == @post.user_id
-      %div.inner2
-        =button_tag("Edit Description",:class =>"btn btn-primary",:id => "edit_desc")
-        =button_tag("Update Description",:class =>"btn btn-success",:id => "update_desc")
-        =button_tag("Cancel",:class =>"btn btn-danger",:id => "cancel_desc")
   %br
     -if @post.pictures.present? 
       - @post.pictures.map do |post_picture|
@@ -93,7 +88,7 @@
           =button_tag("Update",:class => "update_com_#{c.id}",:disabled => 'disabled',:onclick => "update_com(#{c.id})")
           =button_tag("Cancel",:class => "cancel_com_#{c.id}",:disabled => 'disabled',:onclick => "cancel_com(#{c.id})")
           =button_tag("Delete",:class => "delete_com_#{c.id}",:id => "#{c.id}",:onclick => "delete_com(#{c.id})")
-          %br
+
         -else
           - if c.comment.present?
             =text_field_tag 'comment' , "#{c.comment}" ,"data-value" => "#{c.comment}" ,readonly: 'readonly',:class=>"form-control", :id => "com_#{c.id}"
